@@ -19,9 +19,10 @@ import java.util.NoSuchElementException;
 import java.util.Objects;
 import java.util.Optional;
 
-import javax.xml.bind.JAXBException;
 import javax.xml.datatype.DatatypeConfigurationException;
 import javax.xml.transform.TransformerException;
+
+import jakarta.xml.bind.JAXBException;
 
 import org.kitodo.dataeditor.entities.DmdSec;
 import org.kitodo.dataeditor.entities.FileSec;
@@ -221,7 +222,7 @@ public class MetsKitodoWrapper {
     public KitodoType getFirstKitodoTypeOfLogicalDiv(DivType div) {
         List<Object> objects = div.getDMDID();
         if (!objects.isEmpty()) {
-            MdSecType mdSecType = (MdSecType) div.getDMDID().get(0);
+            MdSecType mdSecType = (MdSecType) div.getDMDID().getFirst();
             return JaxbXmlUtils.getKitodoTypeOfDmdSecElement(mdSecType);
         }
         throw new NoSuchElementException("Div element with id: " + div.getID() + " does not have metadata!");
