@@ -25,7 +25,7 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-import javax.xml.bind.JAXBException;
+import jakarta.xml.bind.JAXBException;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -221,7 +221,7 @@ public class RulesetManagement implements RulesetManagementInterface {
 
     @Override
     public Optional<String> getTranslationForKey(List<String> keys, List<LanguageRange> priorityList) {
-        Optional<Key> optionalKey = ruleset.getKey(keys.get(0));
+        Optional<Key> optionalKey = ruleset.getKey(keys.getFirst());
         if (optionalKey.isPresent()) {
             KeyDeclaration keyDeclaration = new KeyDeclaration(ruleset, optionalKey.get());
             for (int i = 1; i < keys.size(); i++) {
