@@ -14,10 +14,10 @@ package org.kitodo.production.controller;
 import java.util.List;
 import java.util.Objects;
 
-import javax.enterprise.context.RequestScoped;
-import javax.faces.context.FacesContext;
-import javax.inject.Named;
-import javax.servlet.http.HttpSession;
+import jakarta.enterprise.context.RequestScoped;
+import jakarta.faces.context.FacesContext;
+import jakarta.inject.Named;
+import jakarta.servlet.http.HttpSession;
 
 import org.kitodo.data.database.beans.Client;
 import org.kitodo.data.database.beans.User;
@@ -55,7 +55,7 @@ public class SessionClientController {
     }
 
     private Client getFirstClientOfCurrentUser() {
-        return getAvailableClientsOfCurrentUser().get(0);
+        return getAvailableClientsOfCurrentUser().getFirst();
     }
 
     private boolean userHasOnlyOneClient() {
