@@ -23,12 +23,12 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 
-import javax.el.ValueExpression;
-import javax.faces.context.ExternalContext;
-import javax.faces.context.FacesContext;
-import javax.servlet.ServletOutputStream;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import jakarta.el.ValueExpression;
+import jakarta.faces.context.ExternalContext;
+import jakarta.faces.context.FacesContext;
+import jakarta.servlet.ServletOutputStream;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -151,7 +151,7 @@ public class RangeStreamContentHandler extends BaseDynamicContentHandler {
         Range full = new Range(0, length - 1, length);
         List<Range> ranges = getRanges(request, response, length, streamedContent.getName());
 
-        if (ranges.isEmpty() || Objects.equals(ranges.get(0), full)) {
+        if (ranges.isEmpty() || Objects.equals(ranges.getFirst(), full)) {
             // Return full file.
             logger.info("Return full file");
             response.setContentType(streamedContent.getContentType());
@@ -161,7 +161,7 @@ public class RangeStreamContentHandler extends BaseDynamicContentHandler {
             copy(inputStream, outputStream, length, full.getStart(), full.getLength());
         } else if (ranges.size() == 1) {
             // Return single part of file.
-            Range r = ranges.get(0);
+            Range r = ranges.getFirst();
             logger.info("Returning part of file : from (" + r.getStart() + ") to (" + r.getEnd() + ")");
             response.setContentType(streamedContent.getContentType());
             response.setHeader("Content-Range", "bytes " + r.getStart() + "-" + r.getEnd() + "/" + r.getTotal());
